Change role to collection & Set jwt to cookie